tests/snapshots/run_wpt_conformance__coreml_reduceLogSumExp_float32_1D_constant_tensor_all_positive_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_log_sum_exp.https.any.js",
    "reduceLogSumExp float32 1D constant tensor all positive default options",
    "coreml",
    "PASS",
)
